NEA. Tesorería [Fixes #1871] [Fixes #1321]